Archive2/6c/ba58b8bf0b9f50/output
main.cpp:5:26: error: constexpr variable 'N' must be initialized by a constant expression
    static constexpr int N = noElems();
                         ^   ~~~~~~~~~
main.cpp:5:30: note: undefined function 'noElems' cannot be used in a constant expression
    static constexpr int N = noElems();
                             ^
main.cpp:4:26: note: declared here
    static constexpr int noElems() { return 1; };
                         ^
1 error generated.
